	            This has been supported for a while in rw/trunk

2021-12-25  Ron Norman <rjn@inglenet.com>

	* parser.y: fix to check for missing REPORT data clauses
	* codegen.c: handle report field with SOURCE "literal"
	* field.c: compute report field size for SOURCE "literal"
	* tree.c: fix bug #772 check for report field missing PIC
	  when using SUM clause

2021-12-14  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (print_fields), codegen.c (output_field_display): only check for
	  EXTERNAL/BASED GLOBAL on level 01/77
	* codegen.c (output_param): don't set external attribute for sub-fields

2021-11-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): output COB_STRIP_CMD when verbose
	* cobc.c: ensure correct buffer size for handling COB_STRIP_CMD
	* cobc.c (print_fields): minor refactoring

2021-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_allocate_identifier, cb_emit_allocate_characters),
	  tree.h, parser.y: split and document (cb_emit_allocate)

2021-11-18  Ron Norman <rjn@inglenet.com>

	* field.c: More work for OCCURS with multiple VALUES
	* codegen.c: More work for initialize of OCCURS with multiple VALUES

2021-11-15  Ron Norman <rjn@inglenet.com>

	FR #234: multiple VALUEs for OCCURS
	* field.c (validate_elem_value): Accept multi VALUES for simple OCCURS
	* tree.h: Add flag_occurs_values to cb_field
	* codegen.c: Handle initialize of OCCURS with multiple VALUES

2021-11-14  Ron Norman <rjn@inglenet.com>

	Implement FR 235: add bitwise operators for numeric items
	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R,
	  B-XOR, B-SHIFT-LC, B-SHIFT-RC
	* parser.y: Add grammar for handling bitwise operations
	* typeck.c, tree.c: Add checks for handling the bitwise operations
	* codegen.c: Add code emission for the bitwise operations

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): adjusted check to correctly catch items bigger
	  than 2 GB